lazarus (0.9.29-0) unstable; urgency=low

  * Snapshot building.

 -- Abou Al Montacir <abou.almontacir@sfr.fr>  Sat, 11 Nov 2010 01:03:00 +0200

lazarus (0.9.28.2-12) unstable; urgency=low

  * Fixed a bug causing safe-upgrade to fail because lazarus-ide-qt4 is
    installed to fix dependencies of lazarus-ide and that Qt based IDE is not
    packaged. The lazarus-ide-qt4 now installs the GTK based IDE by depending
    on lazarus-ide-gtk until Qt IDE gets packaged. (Closes: Bug#594611)
  * Removed lintian warning by adding lcl-gtk2 as first alternative for
    lcl-units dependency list.
  * Bumped standard version to 3.9.1.

 -- Abou Al Montacir <abou.almontacir@sfr.fr>  Mon, 30 Aug 2010 13:32:00 +0100

lazarus (0.9.28.2-11) unstable; urgency=low

  * Fixed scrolling window under GTK implementing ScrollBy method.
  * Changed new release scanning to be uscan based.
  * Fixed dependency issue : lcl-units depends on lcl-gtk but was providing it
    causing lcl-gtk2 not being installed. (Closes: Bug#580557, Bug#579128)
  * Fixed logic bug in code tools when adding published field of a class.

 -- Abou Al Montacir <abou.almontacir@sfr.fr>  Sun, 20 Jun 2010 16:53:00 +0100

lazarus (0.9.28.2-10) unstable; urgency=low

  * Fixed memory leak in GTK based lazarus IDE binary  (Closes: Bug#571997)
  * Fixed crach by avoiding trapping some FPU exceptions which occurs in linked
    C code. (Closes: Bug#571998) 

 -- Abou Al Montacir <abou.almontacir@sfr.fr>  Mon, 09 Apr 2010 00:23:00 +0100

lazarus (0.9.28.2-9) unstable; urgency=low

  * Bumped standard version.
  * Split lazarus-ide package into the following packages in order to reduce
    its size and afford more widgetsets support. (Closes: Bug#553519)
      + lazarus-ide-gtk2 : contains IDE linked to GTK+2 backend
      + lazarus-ide-qt4  : contains IDE linked to Qt4 backend
      + lazarus-ide : contains lazarus launcher and depending on either above
        packges